--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/SamrithaS/audio-visualizer#readme",
   "dependencies": {
     "axios": "^1.6.2",
+    "highcharts": "^11.2.0",
     "vite-plugin-require": "^1.1.11"
   }
 }
